# facedetect

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  compile.py  configure.sh  train.py
classifiers/: dumb.txt
entry_point/: detect.cc  preprocess.cc  train.cc
gfx/figures/face-detection-diagram/: figure.tex
include/: classification.hh  classifier.hh  detect.hh  mblbp.hh  params.hh  train.hh  window.hh
report/: Makefile  bibliography.bib  facedetect.md  src.tex
report/figures/: cascade.tex
report/figures/face-detection-diagram/: Makefile
script/: compute_nb_of_features.py  convert_imagenet.py  plot_animated_mblbp.py  plot_mblbp.py
src/: classification.cc  classifier.cc  detect.cc  main.cc  mblbp.cc  train.cc  window.cc
test/: test_io.cc
